fix routing + alignement contact

--- a/front/src/pages/Contact/contact.css
+++ b/front/src/pages/Contact/contact.css
@@ -22,7 +22,7 @@ body {
 /* --------- SECTION HERO + CARTE --------- */
 
 .contact-hero {
-  padding: 60px 8% 40px;
+  padding: 10px 8% 40px;
   text-align: center;
 }
 
